@@ -52,6 +52,9 @@ Changes in version 0.1.2.7-alpha - 2007-??-??
       this by setting ServerDNSAllowNonRFC953Addresses to 1.
     - Adapt a patch from goodell to let the contrib/exitlist script
       take arguments rather than require direct editing.
+    - Inform the server operator when we decide not to advertise a
+      DirPort due to AccountingMax enabled or a low BandwidthRate. It
+      was confusing Zax, so now we're hopefully more helpful.
 
   o Minor features (controller):
     - Track reasons for OR connection failure; make these reasons available
